# j7-c_usb_meter

./: .gitignore  PROTOCOL.md  README.md  live_data.csv  live_data_ble.csv  pyproject.toml  web_log.csv
src/j7_c_logger/: main.py
src/j7_c_logger/core/: client.py  protocol.py
src/j7_c_logger/web/: server.py
src/j7_c_logger/web/templates/: index.html
src/j7_c_usb_tester/: ble_main.py  ble_scan_debug.py  main.py
