[project]
name = "j7-c-usb-meter"
version = "0.1.0"
description = "Modernized J7-C USB Tester Data Logger"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=2.1.1",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[project.scripts]
j7-c-usb-tester = "j7_c_logger.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/j7_c_logger"]
